[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xpyun-sdk"
dynamic = ["version"]
description = "芯烨云打印机Python SDK - 提供远程小票/标签订单打印、状态查询、语音播报等服务"
readme = "README.md"
authors = [{name = "SDK开发者", email = "noreply@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["printer", "thermal", "receipt", "label", "xpyun", "sdk", "pos", "cloud-print"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
    "isort>=5.0",
]
test = [
    "pytest>=6.0",
    "pytest-benchmark>=3.4.0",
    "responses>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/xpyun-sdk"
Documentation = "https://github.com/your-repo/xpyun-sdk#readme"
Repository = "https://github.com/your-repo/xpyun-sdk.git"
"Bug Tracker" = "https://github.com/your-repo/xpyun-sdk/issues"

[project.scripts]
xpyun-test = "test:main"

[tool.setuptools_scm]
write_to = "xpyun_sdk/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = "\.(pyi?)$"
extend-exclude = ""

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test.py"]
python_files = ["test.py", "*test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=xpyun_sdk --cov-report=term-missing --cov-report=html"

